[package]
name = "network_parser_combinator"
version = "0.1.0"
authors = ["Daniel Segal <dlemel8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
# for tests
hex = "0.4.2"
# for examples
pcap = "0.8"
structopt = { version = "0.3", default-features = false }
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.1"